--- a/hanlon/docker.yaml
+++ b/hanlon/docker.yaml
@@ -2,45 +2,93 @@
 - name: hanlon_docker
   hosts: all
   tasks:
-   - name: ensure_docker-io_is_installed
-     yum: name=docker-io state=latest
+   - name: disable_firewalld
+     service: name=firewalld state=stopped enabled=no
 
-   - name: ensure python-docker-py is installed
+   - name: set_net_ipv4_ip_forward
+     lineinfile: dest=/etc/sysctl.conf line="net.ipv4.ip_forward=1"
+
+   - name: ensure_python-httplib2_is_installed
+     yum: name=python-httplib2 state=latest
+
+   - name: run_sysctl_p
+     command: /usr/sbin/sysctl -p
+
+   - name: ensure_curl_is_installed
+     yum: name=curl state=latest
+
+   - name: ensure_docker-io_is_installed
+     yum: name=docker-io-1.3.2-2.fc21.x86_64 state=present
+
+   - name: start_docker_service
+     service: name=docker state=started enabled=yes
+
+   - name: ensure_python-docker-py_is_installed
      yum: name=python-docker-py state=latest
 
    - name: persistant_mongodb_directory
-     file: state=directory path=/opt/hanlon/data/db
+     file: state=directory path=/opt/hanlon/data/db setype=svirt_sandbox_file_t
+
+   - name: client_config_directory
+     file: state=directory path=/opt/hanlon/cli/config setype=svirt_sandbox_file_t
+
+   - name: create_client_config
+     template: src=hanlon_client.conf.j2 dest=/opt/hanlon/cli/config/hanlon_client.conf setype=svirt_sandbox_file_t
 
    - name: persistant_image_directory
-     file: state=directory path=/opt/hanlon/image
+     file: state=directory path=/opt/hanlon/image setype=svirt_sandbox_file_t
 
    - name: download_mk
      get_url: url="https://github.com/csc/Hanlon-Microkernel/releases/download/v2.0.0/hnl_mk_debug-image.2.0.0.iso" dest=/opt/hanlon/image
+   - name: download_centos7  
+     get_url: url="http://mirror.rackspace.com/CentOS/7.0.1406/isos/x86_64/CentOS-7.0-1406-x86_64-Minimal.iso" dest=/opt/hanlon/image
 
    - name: ensure_mongo_container_run
      docker: 
        image: dockerfile/mongodb 
+       command: mongod --smallfiles
        name: mongodb
-       volumes:
-         - /opt/hanlon/data/db:/data/db
+       volumes: /opt/hanlon/data/db:/data/db
 
    - name: ensure_hanlon_container_run
      docker: 
-       image: jcpowermac/hanlon 
+       image: cscdock/hanlon 
        ports: 8026:8026 
        links: mongodb:mongo 
        name: hanlon
-       env: DOCKER_HOST={{ ansible_eth0.ipv4.address }}
        privileged: true
-       volumes: 
-         - /opt/hanlon/image:/home/hanlon/image
+       volumes: /opt/hanlon/image:/home/hanlon/image
+       env: 
+         DOCKER_HOST: "{{ ansible_eth0.ipv4.address }}"
+         HANLON_SUBNETS: "{{ hanlon_subnets }}" 
 
-   - pause: seconds=30
+   - action: shell /usr/bin/curl -I "http://{{ ansible_eth0.ipv4.address }}:8026/hanlon/api/v1/config/ipxe"
+     register: result
+     until: result.rc == 0
+     retries: 10
+     delay: 6
 
    - name: ensure_atftpd_container_run
      docker: 
-       image: jcpowermac/atftpd
+       image: cscdock/atftpd
        ports: 69:69/udp
        links: hanlon:hanlon
        name: atftpd
        env: DOCKER_HOST={{ ansible_eth0.ipv4.address }}
+
+   - name: add_mk_image
+     uri: 
+       url: "http://{{ ansible_eth0.ipv4.address }}:8026/hanlon/api/v1/image" 
+       method: POST 
+       body: "{\"type\": \"mk\", \"path\": \"/home/hanlon/image/hnl_mk_debug-image.2.0.0.iso\"}"
+       HEADER_Content-Type: "application/json"
+       status_code: 201
+
+   - name: add_centos_image
+     uri: 
+       url: "http://{{ ansible_eth0.ipv4.address }}:8026/hanlon/api/v1/image" 
+       method: POST 
+       body: "{\"type\": \"os\", \"path\": \"/home/hanlon/image/CentOS-7.0-1406-x86_64-Minimal.iso\", \"name\": \"centos\", \"version\": \"7.0\"}"
+       HEADER_Content-Type: "application/json"
+       status_code: 201
+
